...
                Button(action: {
                    presentationMode.wrappedValue.dismiss()
                }) {
                    Image(systemName: "chevron.left")
                        .foregroundColor(.blue)
                }
                .accessibilityIdentifier("BackButton") // Set identifier for UI test
            }
        }
    }
}

struct HorizontalLabel: View {
...
